# clio-search

./: .gitignore  CLAUDE.md  README.md
.planning/: PROJECT.md  (+4 more)
code/: .gitignore  README.md  pyproject.toml
code/benchmarks/: README.md  build_external_corpora.py  build_real_corpus.py  doe_queries.json  evaluate.py  evaluate_agentic.py  evaluate_all.py  evaluate_comparison.py  evaluate_hard.py  evaluate_mcp.py  evaluate_metadata_adaptive.py  evaluate_real.py  evaluate_scale_projection.py  evaluate_v2.py  generate_corpus_v2.py  generate_figures.py  generate_queries_v2.py  hard_queries.json  llm_benchmark.py  llm_providers.py  llm_results.json  numconq_queries.json  pangaea_queries.json  queries.json  queries_v2.json  real_queries.json  real_test_agentic.py  real_test_agentic_verbose.py  real_test_large_corpus.py  real_test_ndp.py  results.json  statistical_tests.py
code/benchmarks/corpus_doe/: doe_0000.txt  doe_0001.txt  doe_0002.txt  doe_0003.txt  doe_0004.txt  doe_0005.txt  doe_0006.txt  doe_0007.txt  doe_0008.txt  doe_0009.txt  doe_0010.txt  doe_0011.txt  doe_0012.txt  doe_0013.txt  doe_0014.txt  doe_0015.txt  doe_0016.txt  doe_0017.txt  doe_0018.txt  doe_0019.txt  doe_0020.txt  doe_0021.txt  doe_0022.txt  doe_0023.txt  doe_0024.txt  doe_0025.txt  doe_0026.txt  doe_0027.txt  doe_0028.txt  doe_0029.txt  doe_0030.txt  doe_0031.txt  doe_0032.txt  doe_0033.txt  doe_0034.txt  doe_0035.txt  doe_0036.txt  doe_0037.txt  doe_0038.txt  doe_0039.txt  (+460 more)
code/benchmarks/corpus_numconq/: numconq_diabetes_data_0000.txt  numconq_diabetes_data_0001.txt  numconq_diabetes_data_0002.txt  numconq_diabetes_data_0003.txt  numconq_diabetes_data_0004.txt  numconq_diabetes_data_0005.txt  numconq_diabetes_data_0006.txt  numconq_diabetes_data_0007.txt  numconq_diabetes_data_0008.txt  numconq_diabetes_data_0009.txt  numconq_diabetes_data_0010.txt  numconq_diabetes_data_0011.txt  numconq_diabetes_data_0012.txt  numconq_diabetes_data_0013.txt  numconq_diabetes_data_0014.txt  numconq_diabetes_data_0015.txt  numconq_diabetes_data_0016.txt  numconq_diabetes_data_0017.txt  numconq_diabetes_data_0018.txt  numconq_diabetes_data_0019.txt  numconq_diabetes_data_0020.txt  numconq_diabetes_data_0021.txt  numconq_diabetes_data_0022.txt  numconq_diabetes_data_0023.txt  numconq_diabetes_data_0024.txt  numconq_diabetes_data_0025.txt  numconq_diabetes_data_0026.txt  numconq_diabetes_data_0027.txt  numconq_diabetes_data_0028.txt  numconq_diabetes_data_0029.txt  numconq_diabetes_data_0030.txt  numconq_diabetes_data_0031.txt  numconq_diabetes_data_0032.txt  numconq_diabetes_data_0033.txt  numconq_diabetes_data_0034.txt  (+5327 more)
code/tests/: conftest.py
(+2780 files in other folders)
